# free-cursor-client

./: Cargo.toml  README.md  README_zh.md  build.rs  install.ps1  install.sh
src/: api.rs  cli.rs  config.rs  logger.rs  main.rs  models.rs  service.rs  telemetry.rs  utils.rs
src/service/: order.rs
