[package]
name = "free-cursor-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
winreg = "0.52.0"
