[package]
name = "free-cursor-client"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
machine-uid = "0.5.3"
os_info = "3.9.0"
reqwest = { version = "0.12.9", default-features = false, features = ["charset", "http2", "gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.33.0"
time = { version = "0.3.36", features = ["local-offset", "macros", "parsing"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
vc-ltl = "5.1.1"
windows = { version = "0.58.0", features = ["Win32_Security", "Win32_System_Console", "Win32_System_Threading"] }
windows-registry = "0.2.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
qrcode = "0.14.1"

[build-dependencies]
winres = "0.1"
